--- a/coinmarketcap.csproj
+++ b/coinmarketcap.csproj
@@ -14,5 +14,9 @@
     <PropertyGroup>
       <OutputType>Exe</OutputType>
       <TargetFramework>netcoreapp2.0</TargetFramework>
-  </PropertyGroup>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DebugType>None</DebugType>
+      <DebugSymbols>false</DebugSymbols>
+    </PropertyGroup>
 </Project>
